fix scrollbar

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,18 @@
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #181818cb;
+    border-radius: 50px;
+}
+
 body {
     background-color: #000 !important;
 }
